# fxplug-sdk4-hanging-test

./: .gitignore  CMakeLists.txt  Readme.md  license.txt
macosfx/: CMakeLists.txt
macosfx/plugin/: CMakeLists.in  CMakeLists.txt  FxPlugHanging.h  FxPlugHanging.mm  Info.plist.in  MetalDeviceCache.h  MetalDeviceCache.m  main.mm
macosfx/plugin/en.lproj/: InfoPlist.strings  Localizable.strings
macosfx/shaders/: CMakeLists.txt  TileableRemoteBrightness.metal  TileableRemoteBrightnessShaderTypes.h
macosfx/wrapper/: AppDelegate.h  AppDelegate.mm  CMakeLists.in  CMakeLists.txt  Info.plist.in  main.mm
macosfx/wrapper/Base.lproj/: CMakeLists.txt  MainMenu.nib  MainMenu.xib
macosfx/wrapper/Resources/FxPlug Hanging/: FxPlug Hanging.moef
macosfx/wrapper/icons/: appicon.icns
